# MyNilam

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.turbo/daemon/: 29acec0cf29d9f8a-turbo.log.2026-07-06  (+3 more)
apps/django-backend/: package.json  pyproject.toml  requirements.txt
apps/django-backend/Project/: api_urls.py  settings.py  urls.py
apps/django-backend/accounts/: admin.py  api_urls.py  models.py  tests.py
apps/django-backend/accounts/api/: serializers.py  views.py
apps/django-backend/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/django-backend/audits/: admin.py  models.py  tests.py
apps/django-backend/audits/migrations/: 0001_initial.py
apps/django-backend/communications/: admin.py  models.py
apps/django-backend/communications/migrations/: 0001_initial.py
apps/django-backend/core/: jwt.py  models.py
apps/django-backend/geo/: admin.py  models.py
apps/django-backend/geo/management/commands/: seed_geo.py
apps/django-backend/geo/migrations/: 0001_initial.py
apps/django-backend/leases/: admin.py  models.py
apps/django-backend/leases/migrations/: 0001_initial.py
apps/django-backend/maintenance/: admin.py  models.py
apps/django-backend/maintenance/migrations/: 0001_initial.py
apps/django-backend/properties/: admin.py  api_urls.py  models.py
apps/django-backend/properties/api/: views.py
apps/django-backend/properties/management/commands/: seed_property_types.py
apps/django-backend/properties/migrations/: 0001_initial.py  0002_rename_rent_amount_property_price_and_more.py
(+90 files in other folders)
